ICU-695 - Fixing paragraph spacing for last child

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -1011,6 +1011,12 @@
 
         &:last-child {
             display: inline;
+
+            &:before {
+                content: '';
+                display: block;
+                height: 0.5em;
+            }
         }
     }
 
